<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vzhled_uctenky"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.johnyjuice.juicyeet.Vzhled_uctenky">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/lbl_Hlavicka_nazev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HlavickaName"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editHlNaz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dic_popl_hint" />

            <TextView
                android:id="@+id/lbl_Hlavicka_dal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HlavickaDal"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <EditText
                android:id="@+id/editHldal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dic_poverujiciho_hint" />

            <TextView
                android:id="@+id/lbl_Hlavicka_dal1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HlavickaDal1"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editHldal1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_provoz_hint" />

            <TextView
                android:id="@+id/lbl_Hlavicka_dal2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HlavickaDal2"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/editHldal2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_pokl_hint" />


            <Button
                android:text="Potvdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button9"
                android:onClick="onClickVzhledUctenky"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/txt_button"
                android:background="@drawable/button_main"/>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
