<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nastaveni_obecne"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.johnyjuice.juicyeet.Nastaveni_obecne">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.github.openeet.openeet.RegisterSale"
        tools:showIn="@layout/activity_register_sale"
        android:weightSum="1"
        android:id="@+id/register_sale_main"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/lbl_dic_popl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_provoz"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edit_idprovoz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dic_popl_hint"
                android:text="1" />

            <TextView
                android:id="@+id/lbl_dic_poverujiciho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dic_poverujiciho"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <EditText
                android:id="@+id/edit_idpokl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dic_poverujiciho_hint" />

            <TextView
                android:id="@+id/lbl_Licencni_kod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Licenční kód"
                android:textAppearance="?android:attr/textAppearanceSmall" />


            <EditText
                android:id="@+id/edit_Licencni_kod"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />

            <Button
                android:text="Ulož"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button9"
                android:onClick="onClickUlozObecne"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/txt_button"
                android:background="@drawable/button_main"
                android:drawableLeft="@drawable/ic_action_uloz"
                android:paddingLeft="@dimen/icon_padding"/>



        </LinearLayout>

    </ScrollView>
</RelativeLayout>

